# BankSystem

./: Dockerfile  README.md
dev/: UML_diagram.dia  about.txt
src/: .clang-tidy  CMakeLists.txt  main.cpp
src/Account/: Account.cpp  Account.hpp  CreditAccount.cpp  DebetAccount.cpp  DepositAccount.cpp
src/Bank/: Bank.cpp  Bank.hpp
src/Client/: Client.cpp  Client.hpp
src/Interface/: ConsoleInterface.cpp  Interface.cpp  Interface.hpp
